Fix spacing on the downloads page

--- a/src/pages/Downloads.module.scss
+++ b/src/pages/Downloads.module.scss
@@ -29,6 +29,7 @@
 
 .downloadsContent {
   display: flex;
+  gap: 10px;
   align-items: flex-start;
   justify-content: center;
   width: 100%;
@@ -122,7 +123,7 @@
       font-size: 12px;
       font-weight: 400;
       line-height: 18px;
-      margin-top: 12px;
+      margin-top: 16px;
     }
 
     .desktopCTA {
